--- a/templates/board.html
+++ b/templates/board.html
@@ -223,10 +223,10 @@
 				<h2 class='WatingDesignerHeadTxt'>디자이너를 기다려요</h2>
 			</div>
 			<div class='WaitContentBox'>
-				<a class='WaitEachTitle' href="">Are You Serious?</a>
+				<a class='WaitEachTitle' href="">작성 예시 1</a>
 			</div>
 			<div class='WaitContentBox'>
-				<a class='WaitEachTitle' href="">So Sally Can Wait</a>
+				<a class='WaitEachTitle' href="">작성 예시 2</a>
 			</div>
 		</div>
 	
@@ -281,7 +281,7 @@
 					<input type='button' class='DesignerSpecialHash' id='Hash_poster_bt' 
 						value='#포스터' name='Hash_poster_bt'>
 					<div style='display:none' id='Hash_poster'></div>
-					<input type='text' class='HashList_write' name='HashList_write'
+					<input type='text' class='category_set' name='category_set'
 						style='display: none' value=''>
 				</div>
 			</div>
