--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Welcome, Beaudeer</title>
+<title>Welcome, Bewdeer</title>
 
 <meta charset="utf-8">
 <link rel="stylesheet" href="{{ url_for('static', filename='bde_index.css') }}">
