--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- 2019 09 11 Beaudeer Project Start. made by Koo Minku  -->
+<!-- 2019 09 11 Bewdeer Project Start. made by Koo Minku  -->
 <!doctype html>
 <html>
 <head>
